--- a/2023-1/beamer/C07_md1.tex
+++ b/2023-1/beamer/C07_md1.tex
@@ -1,8 +1,8 @@
-\documentclass[handout]{beamer} % sin pausas
 %\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
+\usetheme{CambridgeUS}
 %\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
-\usetheme{CambridgeUS}
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -100,7 +100,7 @@
     \\[\baselineskip] ${}^{}$
     \\[\baselineskip]
 }
-\date[07/04/2022]{7 de abril  de 2022}
+\date[04/04/2023]{4 de abril  de 2023}
 
 
 
@@ -112,11 +112,11 @@
 
 
 \begin{frame}    \frametitle{Selecciones ordenadas sin repetición}
-    $X$ finito de $n$ objetos. 
+    Sea $X$ un conjunto finito de $n$ elementos. 
     
     \vskip .2cm
     \begin{center}
-        {\it ¿De cuántas formas podemos elegir $m$ objetos de $X$ en forma ordenada?}
+        {\it ¿De cuántas formas podemos elegir $m$  de $X$ en forma ordenada?}
     \end{center}
     \vskip .3cm        \pause 
     %\begin{proposicion} 
