Corregido beamer hasta clase 07

--- a/2023-1/beamer/C02_md1.tex
+++ b/2023-1/beamer/C02_md1.tex
@@ -1,8 +1,6 @@
-\documentclass{beamer} 
-%\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
-
-
 %\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
@@ -102,7 +100,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[17/03/2022]{17 de marzo  de 2022}
+\date[16/03/2023]{16 de marzo  de 2023}
 
 
 
