--- a/2023-1/beamer/C03_md1.tex
+++ b/2023-1/beamer/C03_md1.tex
@@ -100,7 +100,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[22/03/2022]{22 de marzo  de 2022}
+\date[21/03/2022]{21 de marzo  de 2023}
 
 
 
@@ -163,7 +163,7 @@ En este caso es fácil calcular algún valor de cada sucesión, por ejemplo \pau
 \medspace
 
 \pause
-Cuando una sucesión puede expresar se como combinación de un número determinado de operaciones elementales, diremos que tiene una \textit{fórmula cerrada.}
+Cuando una sucesión puede expresarse como combinación de un número determinado de operaciones elementales, diremos que tiene una \textit{fórmula cerrada.}
 	
 \end{frame}
 
@@ -171,7 +171,7 @@ Cuando una sucesión puede expresar se como combinación de un número determina
 
 \begin{frame}\frametitle{ }  
 
-A veces la sucesión que nos interesa no tiene una fórmula \textit{cerrada} como las anteriores y podemos expresarla en forma \textit{recursiva}.  \pause Por ejemplo,
+A veces la sucesión que nos interesa no tiene una fórmula cerrada como las anteriores y podemos expresarla en forma \textit{recursiva}.  \pause Por ejemplo,
 
 \medspace
 
@@ -310,7 +310,7 @@ La clase que viene aprenderemos un método (principio de inducción) que nos per
 	
 	\medspace \pause 
 	
-	Pero para precisar (y hacerlo claro para una computadora) debemos usar una definición recursiva:
+	Pero para precisar debemos usar una definición recursiva:
 	\pause 
 	\begin{itemize}
 		\item $1! = 1$, \pause 
