--- a/2023-1/beamer/C05_md1.tex
+++ b/2023-1/beamer/C05_md1.tex
@@ -1,9 +1,7 @@
-\documentclass[handout]{beamer} % sin pausas
 %\documentclass{beamer} 
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
-
-
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -102,7 +100,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[31/03/2022]{31 de marzo   de 2022}
+\date[28/03/2023]{28 de marzo   de 2023}
 
 
 
@@ -341,9 +339,9 @@
         
         \noindent ({\it Paso  inductivo}) \pause
         \vskip .2cm
-        Debemos probar que si  vale
+        Debemos probar que si
         \begin{equation*}
-        u_h = 3\cdot 2^h - 2 \cdot 3^h \text{ \;para\; }  0 \le h \le k \text{\; con\; }  k \ge 1, \tag{HI}
+            k \ge 1 \text{\; y\; } u_h = 3\cdot 2^h - 2 \cdot 3^h \text{ \;para\; }  1 \le h \le k, \tag{HI}
         \end{equation*}\pause
         eso implica que
         \begin{equation*}
@@ -431,7 +429,7 @@ Nos adelantamos un poco en los temas de la materia para ejemplificar el principi
     \vskip .6cm\pause
     \noindent ({\it Paso inductivo})\pause
     \vskip .4cm
-    Probaremos que dado $k>1$, 
+    Probaremos que dado $k\ge 2$, 
 
     \begin{gather*}
         \text{todo $h$ tal que $2 \le h \le k$, es producto de primos (HI)} \\[.2cm]
