--- a/2023-1/beamer/C01_md1.tex
+++ b/2023-1/beamer/C01_md1.tex
@@ -1,6 +1,7 @@
 %\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -99,7 +100,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[15/03/2022]{15 de marzo  de 2022}
+\date[14/03/2023]{14 de marzo  de 2023}
 
 
 
