Corregidos beamer hasta clase 10

--- a/2023-1/beamer/C08_md1.tex
+++ b/2023-1/beamer/C08_md1.tex
@@ -1,8 +1,7 @@
-\documentclass[handout]{beamer} % sin pausas
 %\documentclass{beamer} 
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
-
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 
 \usepackage{etex}
@@ -102,7 +101,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[12/04/2022]{12 de abril  de 2022}
+\date[11/04/2023]{11 de abril  de 2023}
 
 
 
@@ -349,7 +348,7 @@
 		$$
 		\binom{n}{m} = \binom{n}{n-m}.
 		$$
-		se puede interpretar en términos de subconjuntos:  $\displaystyle\binom{n}{m}$ es el número de subconjuntos de $m$ ele\-men\-tos de un conjunto de $n$ elementos. 
+		se puede interpretar en términos de conteo:  $\displaystyle\binom{n}{m}$ es el número de subconjuntos de $m$ ele\-men\-tos de un conjunto de $n$ elementos. 
 		\vskip .2cm\pause  
 		
 		Puesto que con cada subconjunto de $m$ ele\-men\-tos hay unívocamente asociado un subconjunto de $n - m$ elementos, su complemento en $X$, es claro que $$\displaystyle\binom{n}{m} = \binom{n}{n-m}.$$
