--- a/2023-1/beamer/C09_md1.tex
+++ b/2023-1/beamer/C09_md1.tex
@@ -1,8 +1,7 @@
-%\documentclass[handout]{beamer} % sin pausas
-\documentclass{beamer} 
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
-
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 
 \usepackage{etex}
@@ -101,7 +100,7 @@
 	\\[\baselineskip] ${}^{}$
 	\\[\baselineskip]
 }
-\date[19/04/2022]{19 de abril  de 2022}
+\date[13/04/2023]{13 de abril  de 2023}
 
 
 
